Fixed the Mobile Menu and Spacing in section

--- a/styles.css
+++ b/styles.css
@@ -245,6 +245,10 @@ footer i:hover{
     grid-template-columns: 1fr;
   }
 
+  .group section > *{
+    padding: 1rem 0;
+  }
+
   .group section:nth-of-type(3){
     padding-bottom: 0;
   }
@@ -266,7 +270,7 @@ footer i:hover{
     position: fixed;
     right: -100%;
     top: 0;
-    bottom: 35%;
+    bottom: 0;
     padding-top: 10rem;
     width: max(50%, 350px);
     text-align: center;
